--- a/frontend-ci/Dockerfile
+++ b/frontend-ci/Dockerfile
@@ -1,5 +1,7 @@
-FROM node:8.9.3-alpine
+FROM node:8.11.3-alpine
 
-RUN apk --update --no-cache add git udev ttf-freefont chromium
+RUN apk update && apk upgrade
+RUN apk add --no-cache bash git openssh
+RUN udev ttf-freefont chromium
 
 ENV CHROME_BIN=/usr/bin/chromium-browser
