--- a/frontend-ci/Dockerfile
+++ b/frontend-ci/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:8.11.3-alpine
 
-RUN apk add --update --no-cache bash git openssh
-RUN apk add --update --no-cache udev ttf-freefont chromium
+RUN apk update
+RUN apk add --no-cache bash git openssh
+RUN apk add --no-cache udev ttf-freefont chromium
 
 ENV CHROME_BIN=/usr/bin/chromium-browser
